[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Main menu.gd" type="Script" id=1]
[ext_resource path="res://Enviorment/magic-cliffs-preview-detail.png" type="Texture" id=2]
[ext_resource path="res://Tiles/button-sword-64.png" type="Texture" id=3]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magic-cliffs-preview-detail" type="Sprite" parent="."]
position = Vector2( 1025, 301 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 478.0
margin_right = 297.0
margin_bottom = 573.0
focus_mode = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
keep_pressed_outside = true
text = "New game"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 267.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="Button-sword-1" type="Sprite" parent="."]
visible = false
position = Vector2( 334, 500 )
rotation = -0.785397
scale = Vector2( 0.628906, 0.648438 )
texture = ExtResource( 3 )

[node name="Button-sword-2" type="Sprite" parent="."]
visible = false
position = Vector2( 335, 551 )
rotation = -0.785397
scale = Vector2( 0.628906, 0.648438 )
texture = ExtResource( 3 )

[connection signal="focus_entered" from="VBoxContainer/start" to="." method="_on_start_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/start" to="." method="_on_start_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/quit" to="." method="_on_quit_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
